--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-title: Your awesome title
+title: BlogNotes
 author:
-  name: GitHub User
-  email: your-email@domain.com
+  name: Gian Luca Matteucci
+  email: glmatt@gmail.com
 description: > # this means to ignore newlines until "show_excerpts:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
@@ -16,14 +16,14 @@ minima:
 
   # generate social links in footer
   social_links:
-    twitter: jekyllrb
-    github:  jekyll
+    twitter: glmatt
+    github:  glmatt
     # devto: jekyll
     # dribbble: jekyll
-    # facebook: jekyll
+    facebook: glmatt
     # flickr:   jekyll
     # instagram: jekyll
-    # linkedin: jekyll
+    linkedin: glmatt
     # pinterest: jekyll
     # youtube: jekyll
     # youtube_channel: UC8CXR0-3I70i1tfPg1PAE1g
