--- a/_config.yml
+++ b/_config.yml
@@ -3,14 +3,7 @@ author:
   name: Gian Luca Matteucci
   email: glmatt@gmail.com
 description: > # this means to ignore newlines until "show_excerpts:"
-  Prima navigazione in rete? 1993.
-  E ancora adesso mi stupisco delle sue potenzialità.
-  Ma come diceva qualcuno "Less is more", quindi, dopo le animazioni in Flash,
-  dopo portali basati su CMS sofisticatissimi o semplicemente nati per i blog e poi
-  diventati dei mostri senza controllo, torniamo alla semplicità, ai siti statici,
-  leggeri, dal caricamento istantaneo, col codice visibile.
-  E quindi sono finito qui, senza un'idea precisa, ma solo la voglia di tornare
-  ai fondamentali, ai contenuti, alle intuizioni, alle curiosità.
+  glmatt
 
 show_excerpts: false # set to true to show excerpts on the homepage
 
